--- a/style.css
+++ b/style.css
@@ -266,3 +266,57 @@ form .new-task::placeholder {
     color: inherit;
     opacity: 0.6;
 }
+
+.delete-alert-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    justify-content: space-between;
+    position: absolute;
+    width: 300px;
+    height: 200px;
+    z-index: 15;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -150px;
+    border: 3px solid black;
+    background: rgba(255, 0, 0, 0.536);
+}
+
+.alert-title-div {
+    background: rgba(137, 0, 0, 0.986);
+}
+
+.delete-alert-container h3 {
+    font-size: 1rem;
+    text-align: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.delete-alert {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 1em;
+}
+
+.delete-alert button {
+    color: white;
+    background: var(--primary-color-dark);
+    border-radius: 9px;
+    font-size: 1rem;
+    padding: 0.7em;
+    padding-block: 0.2em;
+    transition: opacity 150ms ease-in;
+    border: 1px solid white;
+}
+
+.delete-alert button:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
