Add date functionality

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ form {
     margin-right: 1em;
 }
 
-.task-count {
+.list-task {
     color: rgb(38, 38, 38);
     margin: 0;
     font-size: 1rem;
