fix bugs. finishing touches

--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ form {
 
 .list-deletor .delete-button:hover {
     cursor: pointer;
-    color: var(--warning-color);
+    color: greenyellow;
     opacity: 0.7;
     text-shadow: 1px 1px 1px black;
 }
